# rpgdk

./: CONTRIBUTING.md  Cargo.toml  README.md  names.txt  test.txt
docs/: CNAME  index.html
src/: lib.rs  main.rs
src/dice/: mod.rs
src/player/: mod.rs
src/reader/: mod.rs
tests/: common.rs
